feat: :construction_worker: clases para el crud, soporte estricto y autoload para psr-4

--- a/prepros.config
+++ b/prepros.config
@@ -891,6 +891,20 @@
         "config": {
           "autoCompile": true
         }
+      },
+      {
+        "file": "assets/js/main.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "assets/js/main.min.js",
+          "tasks": {
+            "bundle-js": {
+              "options": {
+                "devMode": false
+              }
+            }
+          }
+        }
       }
     ]
   }
